--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,9 +30,9 @@ jobs:
       #          username: ${{ secrets.DOCKER_USERNAME }}
       #          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Log in to Ali Docker Hub
-        uses: docker/login-action@v1
+        uses: aliyun/acr-login@v1
         with:
-          registry: crpi-3i3pv7x8w1lizxgy.cn-shenzhen.personal.cr.aliyuncs.com
+          login-server: crpi-3i3pv7x8w1lizxgy.cn-shenzhen.personal.cr.aliyuncs.com
           username: ${{ secrets.ALI_DOCKER_USERNAME }}
           password: ${{ secrets.ALI_DOCKER_PASSWORD }}
 
