--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,8 @@ on:
 jobs:
 
   build:
+    env:
+      ALI_DOCKER_HOST: crpi-3i3pv7x8w1lizxgy.cn-shenzhen.personal.cr.aliyuncs.com
 
     runs-on: ubuntu-latest
 
@@ -32,13 +34,13 @@ jobs:
       - name: Log in to Ali Docker Hub
         uses: aliyun/acr-login@v1
         with:
-          login-server: crpi-3i3pv7x8w1lizxgy.cn-shenzhen.personal.cr.aliyuncs.com
+          login-server: ${{ ALI_DOCKER_HOST }}
           username: ${{ secrets.ALI_DOCKER_USERNAME }}
           password: ${{ secrets.ALI_DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         env:
-          DOCKER_REPO: akai6/zero-admin-api
+          DOCKER_REPO: ${{ ALI_DOCKER_HOST }}/akai6/zero-admin-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build . --file Dockerfile --tag $DOCKER_REPO:$IMAGE_TAG
