--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,5 +43,6 @@ jobs:
           DOCKER_REPO: ${{ env.ALI_DOCKER_HOST }}/akai6/zero-admin-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build . --file Dockerfile --tag $DOCKER_REPO:$IMAGE_TAG
+          docker build . --file Dockerfile
+          docker tag $DOCKER_REPO:$IMAGE_TAG:$IMAGE_TAG
           docker push $DOCKER_REPO:$IMAGE_TAG
