--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,5 @@ jobs:
           DOCKER_REPO: akai6/zero-admin-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker tag $IMAGE_TAG $DOCKER_REPO:$IMAGE_TAG
+          docker build . --file Dockerfile --tag $DOCKER_REPO:$IMAGE_TAG
           docker push ${{ env.ALI_DOCKER_HOST }}/$DOCKER_REPO:$IMAGE_TAG
