--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,5 +39,5 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build . --file Dockerfile
-          docker tag $IMAGE_TAG $DOCKER_REPO:$IMAGE_TAG
-          docker push ${{ env.ALI_DOCKER_HOST }}/$DOCKER_REPO
+          docker tag $IMAGE_TAG $DOCKER_REPO:1.0
+          docker push ${{ env.ALI_DOCKER_HOST }}/$DOCKER_REPO:1.0
