--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,6 +38,6 @@ jobs:
           DOCKER_REPO: akai6/zero-admin-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build . --file Dockerfile
+          docker build . --file Dockerfile -t ${{ env.ALI_DOCKER_HOST }}/$DOCKER_REPO 1.48 .
           docker tag $IMAGE_TAG:1.48 $DOCKER_REPO:1.48
           docker push ${{ env.ALI_DOCKER_HOST }}/$DOCKER_REPO:1.48
