--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,5 @@ jobs:
           DOCKER_REPO: ${{ env.ALI_DOCKER_HOST }}/akai6/zero-admin-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build . --file Dockerfile --tag akai6/zero-admin-api
+          docker build . --file Dockerfile --tag $DOCKER_REPO:v0.0.1
           docker push $DOCKER_REPO:$IMAGE_TAG
