--- a/pom.xml
+++ b/pom.xml
@@ -101,13 +101,13 @@
 			</dependency>
 
 			<!-- common 的依赖配置-->
-<!--			<dependency>-->
-<!--				<groupId>org.dromara</groupId>-->
-<!--				<artifactId>zero-base-bom</artifactId>-->
-<!--				<version>${revision}</version>-->
-<!--				<type>pom</type>-->
-<!--				<scope>import</scope>-->
-<!--			</dependency>-->
+			<dependency>
+				<groupId>com.zero.admin</groupId>
+				<artifactId>zero-base-bom</artifactId>
+				<version>${revision}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>org.mybatis</groupId>
