--- a/pom.xml
+++ b/pom.xml
@@ -100,13 +100,13 @@
 				<scope>import</scope>
 			</dependency>
 
-			<!-- common 的依赖配置-->
+			<!-- base 的依赖配置-->
 			<dependency>
 				<groupId>com.zero.admin</groupId>
 				<artifactId>zero-base-bom</artifactId>
 				<version>${revision}</version>
 				<type>pom</type>
-				<scope>import</scope>
+<!--				<scope>import</scope>-->
 			</dependency>
 
 			<dependency>
