--- a/zero-admin/pom.xml
+++ b/zero-admin/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>${spring-boot-admin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-core</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
     </dependencies>
 
