feat: 修正应用配置，保证项目正常运行

--- a/zero-admin/pom.xml
+++ b/zero-admin/pom.xml
@@ -36,7 +36,28 @@
 
         <dependency>
             <groupId>com.zero.admin</groupId>
+            <artifactId>zero-system</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zero.admin</groupId>
             <artifactId>zero-base-core</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-encrypt</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-excel</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-idempotent</artifactId>
             <version>${revision}</version>
         </dependency>
         <dependency>
@@ -46,12 +67,17 @@
         </dependency>
         <dependency>
             <groupId>com.zero.admin</groupId>
-            <artifactId>zero-system</artifactId>
+            <artifactId>zero-base-log</artifactId>
             <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.zero.admin</groupId>
-            <artifactId>zero-base-social</artifactId>
+            <artifactId>zero-base-mybatis</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-oss</artifactId>
             <version>${revision}</version>
         </dependency>
         <dependency>
@@ -61,9 +87,43 @@
         </dependency>
         <dependency>
             <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-redis</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-satoken</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-security</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-sensitive</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-social</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
             <artifactId>zero-base-sse</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-tenant</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zero.admin</groupId>
+            <artifactId>zero-base-translation</artifactId>
+            <version>${revision}</version>
         </dependency>
 
     </dependencies>
