--- a/zero-base/zero-base-bom/pom.xml
+++ b/zero-base/zero-base-bom/pom.xml
@@ -21,6 +21,86 @@
         <artifactId>zero-base-core</artifactId>
         <version>${revision}</version>
       </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-encrypt</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-excel</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-idempotent</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-json</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-log</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-mybatis</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-oss</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-ratelimiter</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-redis</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-satoken</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-security</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-sensitive</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-social</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-sse</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-tenant</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zero.admin</groupId>
+        <artifactId>zero-base-translation</artifactId>
+        <version>${revision}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
