--- a/zero-admin/src/main/resources/application.yml
+++ b/zero-admin/src/main/resources/application.yml
@@ -8,7 +8,7 @@ zeroAdmin:
   copyrightYear: 2025
 
 captcha:
-  enable: true      # 页面 <参数设置> 可开启关闭 验证码校验
+  enable: false     # 页面 <参数设置> 可开启关闭 验证码校验
   type: MATH        # 验证码类型 math 数组计算 char 字符验证
   category: CIRCLE  # line 线段干扰 circle 圆圈干扰 shear 扭曲干扰
   numberLength: 1   # 数字验证码位数
