feat: avoid mapper idea error

--- a/zero-admin/src/main/resources/application.yml
+++ b/zero-admin/src/main/resources/application.yml
@@ -111,9 +111,9 @@ tenant:
 mybatis-plus:
   enableLogicDelete: true # 自定义配置 是否全局开启逻辑删除 关闭后 所有逻辑删除功能将失效
   mapperPackage: com.zero.admin.**.mapper # 自定义配置 多包名使用 例如 com.zero.admin.**.mapper,org.xxx.**.mapper
-  mapper-locations: classpath*:mapper/**/*Mapper.xml # 对应的 XML 文件位置
+  mapperLocations: classpath*:mapper/**/*Mapper.xml # 对应的 XML 文件位置
   typeAliasesPackage: com.zero.admin.**.domain # 实体扫描，多个package用逗号或者分号分隔
-  global-config:
+  globalConfig:
     dbConfig:
       idType: ASSIGN_ID # 主键类型; AUTO 自增 NONE 空 INPUT 用户输入 ASSIGN_ID 雪花 ASSIGN_UUID 唯一 UUID; 如需改为自增 需要将数据库表全部设置为自增
 
