--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Install zero-base dependency
-        run: mvn install:install-file -DgroupId=com.zero.admin -DartifactId=zero-base -Dversion=0.0.1 -Dpackaging=jar -Dfile=zero-base/target/zero-base-0.0.1.jar
+        run: mvn install:install-file -DgroupId=com.zero.admin -DartifactId=zero-base -Dversion=0.0.1 -Dpackaging=jar -Dfile=lib/zero-base-0.0.1.jar
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
