--- a/zero-base/zero-base-encrypt/pom.xml
+++ b/zero-base/zero-base-encrypt/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15to18</artifactId>
+            <artifactId>bcprov-jdk18on</artifactId>
         </dependency>
 
         <dependency>
