--- a/zero-admin/Dockerfile
+++ b/zero-admin/Dockerfile
@@ -1,20 +1,7 @@
 FROM openjdk:21
 LABEL maintainer="Akai"
 
-RUN mkdir -p /zero-admin/server/logs \
-    /zero-admin/server/temp \
-    /zero-admin/skywalking/agent
+COPY *.jar /app.jar
 
-WORKDIR /zero-admin/server
-
-ENV SERVER_PORT=8080 LANG=C.UTF-8 LC_ALL=C.UTF-8 JAVA_OPTS=""
-
-EXPOSE ${SERVER_PORT}
-
-COPY target/zero-admin.jar app.jar
-
-SHELL ["/bin/bash", "-c"]
-
-ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} \
-           -XX:+HeapDumpOnOutOfMemoryError -XX:+UseZGC ${JAVA_OPTS} \
-           -jar app.jar
+EXPOSE 8080
+CMD ["java, '-jar', 'target/zero-admin-web.jar'"]
